# internal/app/handler/event/handler.go
@@ -1,9 +1,11 @@
 package event
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 
+	"github.com/K-Kizuku/techer-me-backend/internal/app/handler/schema"
 	"github.com/K-Kizuku/techer-me-backend/internal/app/service/event"
 	"github.com/K-Kizuku/techer-me-backend/pkg/errors"
 	"github.com/K-Kizuku/techer-me-backend/pkg/middleware"
@@ -41,6 +43,59 @@ func (h *Handler) Join() func(http.ResponseWriter, *http.Request) error {
 		}
 		w.WriteHeader(http.StatusCreated)
 		fmt.Fprint(w, "OK")
+		return nil
+	}
+}
+
+// @Summary イベント作成
+// @Description イベント作成のためのエンドポイント
+// @Tags Event
+// @Accept json
+// @Produce json
+// @Param event body schema.CreateEventInput true "Event request body"
+// @Success 201 {string} string "OK"
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /events [post]
+func (h *Handler) Create() func(http.ResponseWriter, *http.Request) error {
+	return func(w http.ResponseWriter, r *http.Request) error {
+		var req schema.CreateEventInput
+		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+			return errors.New(http.StatusBadRequest, err)
+		}
+		if err := h.eventService.Create(r.Context(), &req); err != nil {
+			return err
+		}
+		w.WriteHeader(http.StatusCreated)
+		fmt.Fprint(w, "OK")
+		return nil
+	}
+}
+
+// @Summary イベント詳細の取得
+// @Description イベント詳細を取得する
+// @Tags Event
+// @Accept json
+// @Produce json
+// @Param event_id path string true "Event ID"
+// @Success 200 {object} schema.GetEventDetailByIDOutput
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /events/{event_id} [get]
+func (h *Handler) GetEventDetailByID() func(http.ResponseWriter, *http.Request) error {
+	return func(w http.ResponseWriter, r *http.Request) error {
+		eventID := r.PathValue("event_id")
+		if eventID == "" {
+			return errors.New(http.StatusBadRequest, fmt.Errorf("event_id is required"))
+		}
+		event, err := h.eventService.SelectByID(r.Context(), eventID)
+		if err != nil {
+			return err
+		}
+		w.WriteHeader(http.StatusOK)
+		if err := json.NewEncoder(w).Encode(event); err != nil {
+			return errors.New(http.StatusInternalServerError, err)
+		}
 		return nil
 	}
 }
